# FileManger

./: CMakeLists.txt  FrontendService.cpp  StorageService.cpp  cert.pem  key.pem  main.cpp
BackendService/: CMakeLists.txt  StorageService.cpp  chunks.db  chunks.db-shm  chunks.db-wal  config.json
FrontendService/: CMakeLists.txt  FrontendService.cpp  FrontendThreadpool.h  config.json
Tests/: CMakeLists.txt  backend_utils.h  frontend_utils.h  integration_test.cpp  test_backend.cpp  test_frontend.cpp
WindowsMicorService_Version1/: CMakeLists.txt  main.cpp  myservice.cpp
benchmark/: CMakeCache.txt  CMakeLists.txt  benchmark_service.cpp
